// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Audio interface testing toggleMuted(setStateCallBack) 1`] = `
<audio
  autoPlay={true}
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID01"
  key="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  onEnded={[Function]}
  onPause={[Function]}
  onPlay={[Function]}
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio interface testing toggleMuted(setStateCallBack) 2`] = `
<audio
  autoPlay={true}
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID01"
  key="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  muted={true}
  onEnded={[Function]}
  onPause={[Function]}
  onPlay={[Function]}
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio interface testing toggleMuted(setStateCallBack) 3`] = `
<audio
  autoPlay={true}
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID01"
  key="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  onEnded={[Function]}
  onPause={[Function]}
  onPlay={[Function]}
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;
